7月リリース分（Slack連携は1ワークスペースのみ）
