# src/api/index.ts
@@ -8,12 +8,20 @@ export { OpenAPI } from './core/OpenAPI';
 export type { OpenAPIConfig } from './core/OpenAPI';
 
 export type { AdviceSchema } from './models/AdviceSchema';
+export type { ApiDailyGoalsCompleteRequest } from './models/ApiDailyGoalsCompleteRequest';
+export type { ApiDailyGoalsCreatePost200Response } from './models/ApiDailyGoalsCreatePost200Response';
+export type { ApiDailyGoalsCreatePostRequest } from './models/ApiDailyGoalsCreatePostRequest';
+export type { ApiDailyGoalsGet200Response } from './models/ApiDailyGoalsGet200Response';
+export type { ApiDailyGoalsGet200ResponseDayInner } from './models/ApiDailyGoalsGet200ResponseDayInner';
+export type { ApiDailyGoalsReorderRequest } from './models/ApiDailyGoalsReorderRequest';
+export type { ApiDailyGoalsUpdatePutRequest } from './models/ApiDailyGoalsUpdatePutRequest';
 export type { ApiSmallGoalsSmallGoalIdReorderPostRequest } from './models/ApiSmallGoalsSmallGoalIdReorderPostRequest';
 export type { ApiSupportSendPost200Response } from './models/ApiSupportSendPost200Response';
 export type { ApiSupportUnreadStatusGet200Response } from './models/ApiSupportUnreadStatusGet200Response';
 export type { AvailabilitySchema } from './models/AvailabilitySchema';
 export type { CreateSubscriptionRequest } from './models/CreateSubscriptionRequest';
 export type { CreateSubscriptionResponse } from './models/CreateSubscriptionResponse';
+export type { DailyGoalSchema } from './models/DailyGoalSchema';
 export type { DmMessagesSchema } from './models/DmMessagesSchema';
 export type { GrossProfitSchema } from './models/GrossProfitSchema';
 export type { LargeGoalSchema } from './models/LargeGoalSchema';
@@ -25,9 +33,12 @@ export type { OperatingProfitSchema } from './models/OperatingProfitSchema';
 export type { ReservationSchema } from './models/ReservationSchema';
 export type { SaleSchema } from './models/SaleSchema';
 export type { SettingSchema } from './models/SettingSchema';
+export type { SlackUserMappingRequest } from './models/SlackUserMappingRequest';
 export type { SubscriptionSchema } from './models/SubscriptionSchema';
 export type { UserListSchema } from './models/UserListSchema';
 export type { UserSchema } from './models/UserSchema';
 
 export { Service } from './services/Service';
+export { DailyGoalService } from './services/DailyGoalService';
+export { SlackService } from './services/SlackService';
 export { StripeService } from './services/StripeService';
